# ChangeLog for dev-libs/icu
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/icu/ChangeLog,v 1.106 2010/04/15 23:31:43 arfrever Exp $

*icu-4.4-r1 (15 Apr 2010)

  15 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +icu-4.4-r1.ebuild, +files/icu-4.4-install_libicutest.patch:
  Set QA_DT_NEEDED (bug #215729). Install libicutest (bug #310297).

*icu-4.4 (19 Mar 2010)

  19 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -icu-4.4_rc1.ebuild, +icu-4.4.ebuild:
  Version bump.

*icu-4.4_rc1 (07 Mar 2010)

  07 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +icu-4.4_rc1.ebuild:
  Version bump.

  14 Dec 2009; Raúl Porcel <armin76@gentoo.org> icu-4.2.1.ebuild:
  arm/ia64/sparc stable wrt #281267

  14 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  icu-4.2.1.ebuild:
  Filter -O* on arm/ia64/sparc (bug #296901).

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org> icu-4.2.1.ebuild:
  s390/sh stable wrt #281267

  09 Nov 2009; Jeroen Roovers <jer@gentoo.org> icu-4.2.1.ebuild:
  Stable for HPPA (bug #275769).

  24 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  icu-4.2.1.ebuild,
  +files/icu-4.2.1-pkgdata-build_data_without_assembly.patch:
  Fix building on arm, hppa, ia64, s390, sh and sparc (bug #275769).

  31 Aug 2009; Brent Baude <ranger@gentoo.org> icu-4.2.1.ebuild:
  Marking icu-4.2.1 ppc64 for bug 281267

  29 Aug 2009; nixnut <nixnut@gentoo.org> icu-4.2.1.ebuild:
  ppc stable #281267

  29 Aug 2009; Tobias Klausmann <klausman@gentoo.org> icu-4.2.1.ebuild:
  Stable on alpha, bug #281267

  15 Aug 2009; Markus Meier <maekke@gentoo.org> icu-4.2.1.ebuild:
  amd64/x86 stable, bug #281267

  12 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  icu-4.2.1.ebuild, +files/icu-4.2.1-fix_misoptimizations.patch:
  Fix tests (bug #279748).
