@@ -11,9 +11,10 @@ DIST icu4c-4_2-docs.zip 4767072 RMD160 0ef1c2ef6f649924fa9ee603a48ae664965b0eec 
 DIST icu4c-4_2_1-src.tgz 13161131 RMD160 1b94317a117c40d564ec047cff9cb2de2de3bd9e SHA1 872a77fca51325ab0b335cbbadc1739576078434 SHA256 814de31e1413df945cdd34939b424c4cf7a94d1c481f2d44c99c8ca52b288063
 DIST icu4c-4_4-docs.zip 4743886 RMD160 6321fdc500d018358578249d32e84cfdc3f17db7 SHA1 fc76c72f8fa8954e6348fa2a34530cbc44e1491d SHA256 d7b21930173f9e4a9325bb7056081183c9fb395ca4eb259e9f5ea95239e53418
 DIST icu4c-4_4-src.tgz 16428350 RMD160 ef777ba1324cced2b4dbd1438ed7543eaf115d63 SHA1 6f01fe700e4ba035888c10ec7e964e1772c7f626 SHA256 96caab011e784b004ce5867665fe711402a53eb6d19a8817f582c819711f93f3
+DIST icu4c-4_4_1-src.tgz 15373744 RMD160 dae3634f7a1f9ce78e0b36c49503e5d3c43ebdc5 SHA1 0d011f7e1e042ec8e8833ac910056021d0924d91 SHA256 34994fc183da20a6572bbab56b0dc85d372ec3e574fffb5d571a0da95f723063
 EBUILD icu-4.0.1.ebuild 2172 RMD160 bf0956acfe882128b7be0508b473cc45d2fa5827 SHA1 90f225176c33db740be4f0a7eade80bf9a3b5f1c SHA256 89ec96ebcbe1520c215887b127c3b1b6cf71a0d68af43f975f086cc3e6257a3a
 EBUILD icu-4.2.1.ebuild 2092 RMD160 1bcd9e0b51536bd5726d8b7fbd7065cdd81a37ba SHA1 18ebdeb5a06bc3087bd25984c2f930a015d71d09 SHA256 63d07ed11f3009af74eb0f266b7df17f6f757eb7e40d5512b47100e48a6dd60d
 EBUILD icu-4.4-r1.ebuild 1906 RMD160 317ae46be84eebc8af1e747b7d96586921add441 SHA1 ee0e032d0ee4c51fa9740acbd6ca96835671a3d9 SHA256 f3a007e0fdf560d9a70a7f49c602ffc0c5b4c70ff4b565123a7d568017854d94
-EBUILD icu-4.4.ebuild 1783 RMD160 eddba60e1bc9a8705dab48de7d736a5872fd1503 SHA1 c33373f04c1797db68197839c84d535d382728b2 SHA256 c8c959c76144f06395c2853d11cf1fe00dc4a72ca344baaae09ba9108d6bdc30
-MISC ChangeLog 13009 RMD160 1faa3bfae51933dbc9c84bc95001505da55a02d7 SHA1 26d8515a6348822c456b4cfb12518fd7759472c2 SHA256 13333cc3c0ce6331e84efb30324c8a56a0a652cf5e611863c5c412c1c21bee75
+EBUILD icu-4.4.1.ebuild 1845 RMD160 c6711ad6bb541b9e5fb84ab088f2669131d13e17 SHA1 8171c61da464c03b1c770d932008c20f5603e21c SHA256 9021878282d1590a80b049842adef6bf6e577b5d4b18ea8b12b899b884835b30
+MISC ChangeLog 13163 RMD160 d4e931cb0ef6e0a5186bf4ecea50a5dce254698f SHA1 395ce8ce1b0b146e39e49503d009aa430b75a4ec SHA256 455829fe3640870bc76643c6d6ac8c7467b87ae831a1578acaf358e3bf4002c9
 MISC metadata.xml 274 RMD160 c5ce174bf40a37d632d003bab5e2c5b97777a1c6 SHA1 ccf8f018b8d3a49a1557b5f77e29802cbbc6140d SHA256 b2c70fe9d0595a367c5d41793662a02d301f77b09b6dc70f5b675c2725419a6a
