@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/icu/ChangeLog,v 1.106 2010/04/15 23:31:43 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/icu/ChangeLog,v 1.107 2010/04/29 18:22:54 arfrever Exp $
+
+*icu-4.4.1 (29 Apr 2010)
+
+  29 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -icu-4.4.ebuild, +icu-4.4.1.ebuild:
+  Version bump.
 
 *icu-4.4-r1 (15 Apr 2010)
 
